--- a/category.html
+++ b/category.html
@@ -46,6 +46,7 @@
             {% /if %}
             {% for p in c.posts %}
             <div class="tech-item">
+                <span>{{ p.date }}</span>
                 <a href="{{ p.url }}">{{ p.title }}</a>
             </div>
             {% /for %}
@@ -55,6 +56,7 @@
 							<h2>{{ c.name }}--{{cc.name}}</h2>
 							{% for p in cc.posts %}
 									<div class="tech-item">
+                    <span>{{ p.date }}</span>
 											<a href="{{ p.url }}">{{ p.title }}</a>
 									</div>
 							{% /for %}
